Added all planet information

--- a/fetch_planets.html
+++ b/fetch_planets.html
@@ -13,6 +13,10 @@
                         destination.innerHTML = `
                         <div>
                             <h3>Planet ${json[index].name}</h3>
+                            <p>Diameter: ${json[index].diameter}</p>
+                            <p>Star: ${json[index].star}<?p>
+                            <p>Distance: ${json[index].distance}<?p>
+                            <p>Moons: ${json[index].moons}<?p>
                             <img src=${json[index].image} height=250></img>
                         </div>
                         `;
